Alteração a partir do GitHub

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 	<body>
 		<h1>Minha pagina HTML</h1>
 		<h2>Teste alteração na linha do commit</h2>
+		<h3>Alteração a partir do GitHub</h3>
 	</body>
 </html>
